# home-gacha

./: package.json  pnpm-lock.yaml
api/: Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
arduino/: main.ino
front/: .env  .env.example  .prettierrc.js  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
front/src/: App.tsx  main.tsx  routeTree.gen.ts
front/src/api/: gacha.ts
front/src/components/: FormSelectItem.tsx  GachaCard.tsx  GachaCardDrawer.tsx  GachaCardTag.tsx  GachaGard.tsx
front/src/components/ui/: form.tsx  popover.tsx  progress.tsx  use-toast.ts
front/src/hooks/: useGachaStart.ts  useGachaStatus.ts
front/src/lib/: Background.tsx
front/src/mock/: users.ts
front/src/routes/: __root.tsx  form.lazy.tsx  form1.lazy.tsx  form2.lazy.tsx  home.lazy.tsx  index.lazy.tsx  matching.lazy.tsx  test.lazy.tsx
front/src/types/: gacha.ts
