[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["mahiro72 <mahiro.yoshie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
